# mtg-bulk-sorter

./: .gitignore  README.md  mtg-bulk-sorter.py  pyproject.toml  shell.nix
.github/workflows/: lint.yml  run-tests.yml  test.yml
src/mtg_bulk_sorter/: __init__.py  card.py  mana_colour.py
src/mtg_bulk_sorter/card_properties/: mana_cost.py  rarity.py  sub_types.py  subtypes.py  super_types.py  supertypes.py  types.py
tests/: test_colours.py  test_rarity.py  test_types.py
